--- a/src/Home/ErrorPage.css
+++ b/src/Home/ErrorPage.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap');
 
+div {
+    -webkit-touch-callout: none;
+    user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+}
+
+
 .error-container {
     position: relative;
     background-color: #000;
