--- a/src/Home/Profile/ProfileDetail.css
+++ b/src/Home/Profile/ProfileDetail.css
@@ -1,3 +1,12 @@
+div {
+    -webkit-touch-callout: none;
+    user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+}
+
+
 .detail-wrapper {
     display: flex;
     flex-direction: column;
