--- a/src/Home/Profile/profileMain.css
+++ b/src/Home/Profile/profileMain.css
@@ -1,3 +1,11 @@
+div {
+    -webkit-touch-callout: none;
+    user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+}
+
 /* 전체 배경 및 텍스트 스타일 */
 .profile-container {
     background-color: #000;
