--- a/src/Home/manual/ManualIntro.css
+++ b/src/Home/manual/ManualIntro.css
@@ -1,3 +1,12 @@
+div {
+    -webkit-touch-callout: none;
+    user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+}
+
+
 .manual-wrapper {
     width: 100%;
     height: 100vh;
