--- a/src/Home/manual/ManualMain.css
+++ b/src/Home/manual/ManualMain.css
@@ -1,4 +1,4 @@
-div {
+* {
   -webkit-touch-callout: none;
   user-select: none;
   -moz-user-select: none;
@@ -9,7 +9,7 @@ div {
 
 .manualMain-container {
   width: 100vw;
-  height: 100vh;
+  min-height: 100svh;
   background-color: black;
   display: flex;
   justify-content: center;
