--- a/src/Intro/LogoIntro.css
+++ b/src/Intro/LogoIntro.css
@@ -1,7 +1,7 @@
 /* ============================
   공통 컨테이너 스타일
 ============================ */
-div {
+* {
     -webkit-touch-callout: none;
     user-select: none;
     -moz-user-select: none;
