--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap');
 
-div {
+* {
     -webkit-touch-callout: none;
     user-select: none;
     -moz-user-select: none;
