--- a/src/Intro/LogoIntro.css
+++ b/src/Intro/LogoIntro.css
@@ -37,7 +37,8 @@
     animation:
         zoomIn 1.5s ease-in-out,
         blink 2s infinite,
-        glitch 0.3s infinite;
+        glitch 0.3s infinite,
+        shake 0.6s infinite;
 }
 
 /* ============================
@@ -152,4 +153,19 @@
     to {
         opacity: 1;
     }
+}
+
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
