빌딩 이미지 수정

--- a/src/Home/manual/ManualMain.css
+++ b/src/Home/manual/ManualMain.css
@@ -9,7 +9,7 @@
 
 .manualMain-container {
   width: 100vw;
-  min-height: 100svh;
+  height: 100vh;
   background-color: black;
   display: flex;
   justify-content: center;
